mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_char_too_long.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_char_too_long.mux`
error: Char literal must be exactly one character
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_char_too_long.mux:2:11
   |
 2 | auto c = 'ab'
   |           ^
   |
= help: Example: 'a', '\n', '\''
